# LegalQA_v2

./: .env.example  .flake8  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  DOCKER_OPTIMIZATION.md  Dockerfile  Dockerfile.ci  Dockerfile.minimal  LICENSE  METRICS_ANALYSIS.md  Makefile  Makefile.optimized  PERFORMANCE_ANALYSIS.md  PR_SUMMARY.md  README.md  README_OPTIMIZED.md  TESTING_CHECKLIST.md  TESTING_SUMMARY.md  docker-compose.dev.yml  docker-compose.optimized.yml  docker-compose.yml  flake8_report.txt  flake8_report_final.txt  flake8_report_final_all.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: canary-deployment.yml  prometheus.yml  redis.conf
config/grafana/dashboards/: sli_slo_dashboard.json
docs/deployment/: DOCKER_OPTIMIZATION.md
docs/monitoring/: METRICS_ANALYSIS.md
notebooks/: 01_load_data.ipynb  02_faiss_index_test.ipynb  03_custom_retriever_test.ipynb  04_llm_reranker_test.ipynb  05_qa_chain_test.ipynb  06_rag_quality_evaluation.ipynb
perf/: README.md  rag_performance.js  smoke.js
scripts/: build_database.py  build_local_index.py  create_chunks.py  create_sample.py  main.py  postgres-init.sql  run_tests.py  validate_optimizations.py
src/chain/: __init__.py  qa_chain.py
src/data/: parquet_loader.py
src/data_loading/: faiss_loader.py  parquet_loader.py
src/inference/: __init__.py  app.py  optimized_app.py
src/infrastructure/: __init__.py  cache_manager.py  db_manager.py  gemini_embeddings.py
src/prompts/: legal_assistant_prompt.txt  reranker_prompt.txt
src/rag/: __init__.py  optimized_retriever.py  retriever.py
tests/: __init__.py  conftest.py  test_functionality.py  test_integration.py  test_performance.py  test_unit.py
tests/monitoring/: test_metrics_app.py
tests/performance/: README.md  rag_performance.js  smoke.js
