[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legalqa"
version = "0.1.0"
description = "Legal Question Answering System"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    # Core application dependencies
    "pandas",
    "pyarrow",
    "python-dotenv",
    "faiss-cpu",
    "langchain",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-core",
    "langchain-community",
    "sentence-transformers",
    "fastapi",
    "uvicorn[standard]", # uvicorn is needed to run fastapi
    "psycopg2-binary",
    "pgvector",
    "scikit-learn",
    "numpy<2.0",
    "google-genai",
    # Performance optimizations
    "asyncpg>=0.28.0",  # Faster async PostgreSQL driver
    "aioredis>=2.0.0",  # Redis for caching
    "redis[hiredis]>=4.0.0",  # Redis with faster hiredis parser
    "sqlalchemy[asyncio]>=2.0.0",  # Async SQLAlchemy support
    "prometheus-client>=0.17.0",  # Metrics and monitoring
    "aioboto3>=11.0.0",  # Async AWS operations if needed
    "cachetools>=5.0.0",  # Additional caching utilities
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "psutil>=5.9.0",  # For performance monitoring in tests
    "toml",
    "pyyaml",
    "flake8",
    "bandit",
]
notebook = [
    "matplotlib",
    "seaborn",
    "jupyter",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = false
strict_equality = false

# Ignore missing stubs for external libraries
[[tool.mypy.overrides]]
module = [
    "faiss",
    "asyncpg",
    "psycopg2",
    "psycopg2.pool",
    "sklearn.metrics.pairwise",
    "src.data.faiss_loader"
]
ignore_missing_imports = true



[tool.hatch.build.targets.wheel]
packages = ["src"]